# automated-supermarket-ordering

./: README.md  pyproject.toml
.claude/: CLAUDE.md
.claude/agents/: basket-verifier.md  db-updater.md  google-keep-reader.md  ingredient-calc.md  recipe-scorer.md  recipe-sync.md  tesco-basket.md
.claude/commands/: sync-recipes.md  weekly-shop.md
.claude/plans/: supermarket-ordering.md
data/: unit_conversions.json
src/shopping/: ingredients.py  meal_planning.py  models.py  pantry.py  shopping_list.py
tests/: test_ingredients.py  test_integration.py  test_pantry.py  test_shopping_list.py
