[project]
name = "automated-supermarket-ordering"
version = "0.1.0"
description = "Automated weekly supermarket ordering workflow"
requires-python = ">=3.11"
dependencies = [
    "pint>=0.24",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
