[project]
name = "automated-supermarket-ordering"
version = "0.1.0"
description = "Automated weekly supermarket ordering workflow"
requires-python = ">=3.11"
dependencies = [
    "pint>=0.24",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/shopping"]

[tool.pytest.ini_options]
testpaths = ["tests"]
